--- a/css/buboicss.css
+++ b/css/buboicss.css
@@ -1,4 +1,4 @@
-/************** buboi css *******************/
+/* Print Styles */
 
 /* popup_box DIV-Styles*/
 #popup_box {
@@ -47,5 +47,3 @@ text-decoration:none;
     font-weight:500;      
 }
 
-
-/*************** end *****************/
