--- a/css/buboicss.css
+++ b/css/buboicss.css
@@ -47,3 +47,8 @@ text-decoration:none;
     font-weight:500;      
 }
 
+
+/* Print Style Sheet */
+@media print {
+body { background:white; color:black; margin:0 }
+}
